# hfsapi

./: .gitignore  AI.md  DISCLAIMER.md  HELP.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
hfsapi/: __init__.py  cli.py  cli_config.py  client.py  models.py
tests/: config.py  conftest.py  main.py  test_api_permissions.py  test_cli.py  test_cli_config.py  test_client.py  test_download.py  test_upload_large_file.py
tools/: docker-compose.yaml
