[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfsapi"
version = "0.1.0"
description = "HFS (HTTP File Server) Python API 客户端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

# uv：开发依赖（PEP 735），uv sync 会一并安装
[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: 需要真实 HFS 服务器 (http://127.0.0.1:8280/data/)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hfsapi*"]
